# hlivy

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  hlivy.cabal  package.yaml  stack.yaml
dev/: Makefile  bootstrap.sh
examples/: .gitignore  LICENSE  README.md  examples.cabal  package.yaml  stack.yaml
examples/src/Examples/: Batch.hs  Session.hs
src/: Lib.hs
src/Network/: Livy.hs
src/Network/Livy/: Env.hs  Monad.hs  Request.hs  Response.hs  Types.hs
src/Network/Livy/Client/: Batch.hs  CreateSession.hs  GetSession.hs  GetSessionState.hs  GetSessions.hs  Interactive.hs
src/Network/Livy/Client/Batch/: CreateBatch.hs  GetBatch.hs  GetBatchLogs.hs  GetBatchState.hs  GetBatches.hs  KillBatch.hs
src/Network/Livy/Client/Interactive/: CancelStatement.hs  CreateSession.hs  GetSession.hs  GetSessionLogs.hs  GetSessionState.hs  GetSessionStatement.hs  GetSessionStatements.hs  GetSessions.hs  KillSession.hs  RunStatement.hs  RunStatementCompletion.hs
src/Network/Livy/Client/Internal/: JSON.hs
src/Network/Livy/Client/Types/: Batch.hs  Session.hs  Statement.hs
src/Network/Livy/Internal/: Text.hs
