cabal-version:  >= 1.10
name:           examples
version:        0.1.0.0
homepage:       https://github.com/EarnestResearch/hlivy/examples
author:         Daniel Donohue
maintainer:     ddonohue@earnestresearch.com
copyright:      2018 Earnest Research
build-type:     Simple

library
  exposed-modules:
      Examples.Batch
      Examples.Session
  other-modules:
      Paths_examples
  hs-source-dirs:
      src
  default-extensions: OverloadedStrings
  ghc-options: -Wall -fno-warn-type-defaults
  build-depends:
      base >=4.5  && <5
    , hlivy >=1.0 && <2.0
    , lens >=4.17 && <5.0
  default-language: Haskell2010
